Created an Crud api Registration

--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  background-color: #18181b;
+  background-color: #14213d;
   color: #ffffff; /* Optional: white text for contrast */
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
