--- a/Frontend/src/app/login/login.html
+++ b/Frontend/src/app/login/login.html
@@ -1,28 +1,36 @@
 <div class="login-container">
   <h1>Login</h1>
 
-  <form action="">
+  <!-- Add (ngSubmit) and #form reference -->
+  <form (ngSubmit)="onSubmit(form)" #form="ngForm">
     <div class="form-data">
-      <label for="name">Email</label>
+      <label for="email">Email</label>
       <input
-        type="text"
-        name="name"
-        id="name"
+        type="email"
+        name="email"
+        id="email"
+        required
+        [(ngModel)]="formData.email"
         placeholder="Enter your Email"
       />
     </div>
+
     <div class="form-data">
-      <label for="name">Password</label>
+      <label for="password">Password</label>
       <input
         type="password"
         name="password"
         id="password"
+        required
+        [(ngModel)]="formData.password"
         placeholder="Enter your password"
       />
     </div>
-     <button type="submit">Login</button>
+
+    <button type="submit">Login</button>
   </form>
-   <p class="account-text">
+
+  <p class="account-text">
     Don't have an account?
     <a routerLink="/regi" class="register-link">Register</a>
   </p>
