Added the Dashboard with login protected Route

--- a/Frontend/src/app/app.html
+++ b/Frontend/src/app/app.html
@@ -1,11 +1,11 @@
-<ul class="nav-buttons">
+<!-- <ul class="nav-buttons">
   <li>
     <a routerLink="/login" class="nav-btn">Login</a>
   </li>
   <li>
     <a routerLink="/regi" class="nav-btn">Register</a>
   </li>
-</ul>
+</ul> -->
 
   
 
