--- a/Frontend/src/app/login/login.html
+++ b/Frontend/src/app/login/login.html
@@ -32,6 +32,6 @@
 
   <p class="account-text">
     Don't have an account?
-    <a routerLink="/regi" class="register-link">Register</a>
+   <a (click)="goToRegister()" class="register-link">Register</a>
   </p>
 </div>
