--- a/Frontend/src/app/registration/registration.html
+++ b/Frontend/src/app/registration/registration.html
@@ -89,4 +89,8 @@
 
     <button type="submit">Register</button>
   </form>
+   <p class="account-text">
+     Already have an account?
+   <a (click)="goToLogin()" class="register-link">Login</a>
+  </p>
 </div>
