--- a/Frontend/src/app/registration/registration.css
+++ b/Frontend/src/app/registration/registration.css
@@ -85,3 +85,28 @@ button[type="submit"]:hover {
   text-decoration: underline;
 }
 
+.error {
+  color: red;
+  font-size: 13px;
+  margin-top: 4px;
+}
+
+.input-wrapper {
+  position: relative;
+}
+
+.input-wrapper input {
+  width: 87%;
+  padding-right: 50px; /* space for button */
+}
+
+.toggle-btn {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+}
